Update AmbientCommand.java